# WhatsAppBulkSender

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
issues/: feature_request_send_messages_every_x_seconds.md
tests/: test_bot.py  test_bot_wrapper.py  test_cli.py  test_data_manager.py  test_driver_utils.py  test_main.py  test_updater.py  test_utils.py
whatsapp_sender/: __init__.py  bot.py  bot_wrapper.py  config.py  data_manager.py  driver_utils.py  gui.py  updater.py  utils.py
whatsapp_sender/console/: cli.py
whatsapp_sender/core/: bot.py  bot_wrapper.py  config.py  updater.py
whatsapp_sender/gui/: app.py
whatsapp_sender/provider/: data_manager.py
whatsapp_sender/utils/: common_utils.py  driver_utils.py
